--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
       <div class="container">
         <div class="carousel-caption">
           <h1>Who am I?</h1>
-          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+          <p>Im the best in controlling the World #muhaha</p>
         </div>
       </div>
     </div>
@@ -52,7 +52,7 @@
       <div class="container">
         <div class="carousel-caption">
           <h1>What do I do?</h1>
-          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+          <p>Anything!</p>
         </div>
       </div>
     </div>
@@ -60,7 +60,7 @@
       <div class="container">
         <div class="carousel-caption">
           <h1>Why the fuck am I doing this?</h1>
-          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+          <p>Cause I can!</p>
         </div>
       </div>
     </div>
@@ -98,7 +98,7 @@
 <footer>
   <div class="container">
     <h3>Welcome MY vasals!</h3>
-    <p>READ IT, to get in touch!!!</p>
+    <p>READ IT, to get in touch!!! OR just throw a Bottle in the Lake next to you. I will cantact you!</p>
   </div>
 </footer>
     <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
